# phonon_monte_carlo

./: Cargo.toml  doc-header.html  pyproject.toml
.cargo/: config.toml
.github/workflows/: build.yml
python/phonon_monte_carlo/: __init__.py  __init__.pyi
src/: config.rs  data_structures.rs  lib.rs  materials.rs  phonon.rs  postprocessing.rs  reflection_models.rs  simulate.rs  simulate_particle.rs  top_bottom_scattering.rs  wall_scattering.rs
src/data_structures/: point.rs  vec3.rs
