[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "phonon_monte_carlo"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"


# Building for Windows:
# maturin build --release --auditwheel repair

# Building for Linux:
# docker run --rm -v "$(pwd):/io" ghcr.io/pyo3/maturin build --release
